[package]
name = "dimension-bridge"
version = "0.1.0"
edition = "2024"
description = "Automated certificate lifecycle management system that bridges the gap between PKI complexity and service simplicity."
license = "Apache-2.0"
repository = "https://github.com/appleparan/dimension-bridge"
readme = "README.md"
keywords = ["certificate", "pki", "automation", "lifecycle", "tls"]
categories = ["cryptography", "network-programming", "web-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", default-features = false, features = ["fs", "time", "rt-multi-thread", "macros"] }
# HTTP client for notifications
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# JSON serialization for notifications
serde_json = "1.0"
# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# Lint
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
unused_must_use = "warn"
variant_size_differences = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Additional security and correctness lints
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
# Performance lints
inefficient_to_string = "warn"
large_stack_arrays = "warn"
# Style lints
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
# Allow some pedantic lints that can be too noisy
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
